          the cell size.
	- sanitise the argument of SD / SU sequences. Fixes a possible
	  crash when the argument is big enough, red hat bug #711137
	  (Emanuele Giaquinta).
        - correctly split long lines when scrolling.
	- Fix compilation on systems with bsd style utmp and no utmpx,
	  such as openbsd.
	- consume button release event in matcher (exg).

9.12 Wed Jun 29 14:34:28 CEST 2011
        - fix regression in processing of SelectionNotify events.
          urxvt would fail to request a selection if the owner did not
          support the UTF8_STRING target.
        - fix rendering of double width chars in certain circumstances, more
          likely to happen if urxvt is compiled with 256 colors support as
          urxvt runs out of fonts much earlier then.  Fixes gentoo bug #358151
          (Emanuele Giaquinta).
        - restore support for 'list' syntax in keysym resources (requested by Sung Pae).
	- always premultiply colour values - while this increases differences between
          core fonts and xft, it is "more correct" in practical situations.
        - disable PTYTTY_REENTRANT option - not needed for urxvt and saves a bit of code.
        - remove lucidatypewriter from the list of fallback fonts, it was the only
          non-xft non-cellfont in the list anyway.

9.11 Mon May  2 10:34:46 CEST 2011
        - fix compilation on GNU/Hurd, debian bug #624736.
        - remove 'list' syntax for keysym resources, as it serves no useful purpose.
          If you need it, poke us and provide a use case.
        - fix alpha channel support. Premultiply alpha in colours if the visual
          supports an alpha channel, as xrender expects premultiplied alpha
          (Emanuele Giaquinta).
        - fix reply to a selection request sent by an obsolete client
          such as syncterm (patch by Marcin Cieslak).
	- fix crash when the window is resized and the overlay is active
	  (Emanuele Giaquinta, reported by Ryan Kavanagh).